# cnpy

./: .clang-format  CMakeLists.txt  README.md  cnpy.cpp  cnpy.h  example1.cpp  mmap_util.h  test_cnpy.cpp  test_generic_regression.cpp  test_mmap_array.cpp  test_mmap_save_load.cpp  test_mmap_util.cpp  test_new_npz_mmap.cpp  test_npy_fortran_order.cpp  test_npy_nonfortran_order.cpp
